# meld-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.zed/: settings.json
docs/: architecture.md
resources/css/: meld.css
resources/gschemas/: org.gnome.meld-rs.gschema.xml
resources/styles/: meld-base.style-scheme.xml  meld-dark.style-scheme.xml
scripts/: build.bat  build.ps1  build.sh  copy-dlls.ps1  run.ps1  run.sh  test.sh
src/: app.rs  lib.rs  main.rs  undo.rs  window.rs
src/config/: mod.rs  recent.rs  settings.rs
src/diff/: buffer_lines.rs  diff_state.rs  dirdiff.rs  engine.rs  engine_part1.txt  file_compare.rs  filediff.rs  fuzz_tests.rs  inline_cache.rs  matchers.rs  mod.rs  movement.rs  similarity.rs
src/ui/: action_gutter.rs  chunk_gutter.rs  commit_dialog.rs  diff_grid.rs  diff_map.rs  diff_view.rs  dir_view.rs  emblem_cell_renderer.rs  file_button.rs  find_bar.rs  link_map.rs  merge_view.rs  mod.rs  msgarea.rs  new_diff_tab.rs  patch_dialog.rs  pathlabel.rs  preferences.rs  push_dialog.rs  recent_selector.rs  revert_dialog.rs  save_confirm_dialog.rs  statusbar.rs  style.rs  tab_manager.rs  vc_view.rs
src/utils/: encoding.rs  file_utils.rs  mod.rs  task.rs  text_filter.rs
src/vc/: git.rs  hg.rs  mod.rs  svn.rs
tests/: diagnostic_diff.rs  integration_tests.rs
